--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,28 @@
 logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Dependency directory
 node_modules
+/.pnp
+.pnp.js
 
 # Optional npm cache directory
 .npm
+
+# testing
+/frontent/coverage
+
+# production
+/frontent/build
 
 # Optional REPL history
 .DS_Store
 .idea
 .vscode
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
